DeleteTaskTodoMicroservice/manifest/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deletetask
spec:
  replicas: 2
  selector:
    matchLabels:
      app: deletetask
  template:
    metadata:
      labels:
        app: deletetask
    spec:
      containers:
      - name: deletetask
        image: devtodoacrwestus.azurecr.io/addtask:latest
        ports:
        - containerPort: 8000  # see from video
